--- a/src/index.html
+++ b/src/index.html
@@ -1,65 +1,48 @@
 <!DOCTYPE html>
 <html>
-
 <head>
-
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="">
-  <meta name="author" content="">
-
-  <title>Example</title>
-
-  
-<!-- LEAFLET-->
-  
-      <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.4/dist/leaflet.css" integrity="sha512-puBpdR0798OZvTTbP4A8Ix/l+A4dHDD0DGqYW6RQ+9jxkRFclaxxQb/SJAWZfWAkuyeQUytO7+7N4QKrDh+drA==" crossorigin=""/>
-          <script src="https://unpkg.com/leaflet@1.3.4/dist/leaflet.js" integrity="sha512-nMMmRyTVoLYqjP9hrbed9S+FzjZHW5gY1TWCHA5ckwXZBadntCNs8kEqAWdrb9O7rxbCaA4lKTIWjDXZxflOcA==" crossorigin=""></script>
-
-
-      	<style>
-      		html, body {
-      			height: 100%;
-      			margin: 0;
-      		}
-      		#map {
-      			width: 800px;
-      			height: 800px;
-      		}
-      	</style>
-
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-  
+<meta charset="utf-8">
+<title>Load data from an external GeoJSON file</title>
+<meta name="viewport" content="initial-scale=1,maximum-scale=1,user-scalable=no">
+<link href="https://api.mapbox.com/mapbox-gl-js/v2.6.1/mapbox-gl.css" rel="stylesheet">
+<script src="https://api.mapbox.com/mapbox-gl-js/v2.6.1/mapbox-gl.js"></script>
+<style>
+body { margin: 0; padding: 0; }
+#map { position: absolute; top: 0; bottom: 0; width: 100%; }
+</style>
 </head>
-
 <body>
-
-
-  <div class="container">
-      <div id='map'></div>
-  </div>
-
+<div id="map"></div>
 
 <script>
-  var map = L.map('map').setView([327, 792], 11); 
-
-  var tiles = L.tileLayer('https://api.mapbox.com/styles/v1/{id}/tiles/{z}/{x}/{y}?access_token=pk.eyJ1IjoibWFya2lhbm51Y2NpIiwiYSI6ImNreXE4ZzJjMTBob2UzMW85cjlod201OGMifQ.VCWtZQ2OAYozIcQPTaRCpg', {
-			maxZoom: 18,
-			attribution: 'Map data &copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors, ' +
-				'Imagery © <a href="https://www.mapbox.com/">Mapbox</a>',
-			id: 'mapbox/light-v9',
-			tileSize: 512,
-			zoomOffset: -1
-		}).addTo(map);
-  
-  $.getJSON("openFoodTrucks.json",function(data){
-    L.geoJson(data).addTo(map);
+	mapboxgl.accessToken = 'pk.eyJ1IjoibWFya2lhbm51Y2NpIiwiYSI6ImNreXE3dWszdzBoNWIydm85YTM3MnppMjYifQ.4PYJ0n2uADbmB_GsRQsQfw';
+    const map = new mapboxgl.Map({
+        container: 'map', // container ID
+        style: 'mapbox://styles/markiannucci/ckyrd8gzj0kwk15lq546lxlsu', // style URL
+        zoom: 12, // starting zoom
+        center: [-122.4194, 37.7749] // starting center
     });
 
+    map.on('load', () => {
+        map.addSource('foodtrucks', {
+            type: 'geojson',
+            // Use a URL for the value for the `data` property.
+            data: 'openFoodTrucks.json'
+        });
+
+        map.addLayer({
+            'id': 'foodtrucks',
+            'type': 'circle',
+            'source': 'foodtrucks',
+            'paint': {
+                'circle-radius': 4,
+                'circle-stroke-width': 2,
+                'circle-color': 'hsl(186, 100%, 50%)',
+                'circle-stroke-color': 'hsl(196, 51%, 50%)'
+            }
+        });
+    });
 </script>
-  
+
 </body>
-
 </html>
-
